--- a/index.html
+++ b/index.html
@@ -47,22 +47,22 @@
 								<h2 class="major">Intro</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
 								<p>I am currently a senior at Texas State University in San Marcos, TX. I am 24 years old, an aspiring software developer, and am interested in web design and video game developing.</p>
-								<p>A little about my personal life: I enjoy cooking and baking. I once helped prep and grill a variety of meats for about 50 people. I also enjoy working out, hiking, and running marathons. I am a huge Dallas Cowboys fan and am convinced it is our year, every year. But above all, I am a family man and would do anything for my family.</p>
+								<p>A little about my personal life: I enjoy cooking and baking. I once helped prep and grill a variety of meats for about 50 people. I also enjoy working out, hiking, and running 5k's. I am a huge Dallas Cowboys fan and am convinced it is our year, every year. But above all, I am a family man and would do anything for my family.</p>
 							</article>
 
 						<!-- Work -->
 							<article id="work">
 								<h2 class="major">Work</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>I plan on finding my first software developing job after I graduate. I do not have much experience in the workforce, but I am a very determined, motivated, and hard worker. If I start something I do not want to quit on it until it is finished. I am confident I will improve your company or business.</p>
-								<p>My past work experience consists of mostly customer service and fine dining service. I am experienced in working with others and satisfying customers. I know what it takes to be a member of a team, and also a leader.</p>
+								<p>I plan on finding my first software developing job before or after I graduate. I do not have much experience in the workforce, but I am a very determined, motivated, and hard worker. If I start something I do not want to quit on it until it is finished. I am confident I will improve your company or business.</p>
+								<p>My past work experience consists of mostly customer service and fine dining service. I am experienced in working with others and satisfying customers. I know what it takes to be a member of a team, and also a leader when need be.</p>
 							</article>
 
 						<!-- About -->
 							<article id="about">
 								<h2 class="major">About</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p>I am currently a senior at Texas State. I plan on graduating with a BA in Computer Science in the spring, and am hoping to become a software developer. I do not have any preferences for what exactly I'd like to work on, I mainly want to broaden my skills and try something new. Currently I have finished projects such as designing and implementing a compiler from scratch, as well as an ARM v* disassembler.</p>
+								<p>I am currently a senior at Texas State. I plan on graduating with a BA in Computer Science in the spring, and am hoping to become a software developer. I do not have any preferences for what exactly I'd like to work on, but I mainly want to broaden my skills and try something new. Currently I have finished projects such as designing and implementing a compiler from scratch, as well as an ARM v8 disassembler.</p>
 							</article>
 
 						<!-- Contact -->
