--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 						<!-- Intro -->
 							<article id="intro">
 								<h2 class="major">Intro</h2>
-								<span class="image main"><img src="images/portfolio.png" alt="" /></span>
+								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
 								<p>I am currently a senior at Texas State University in San Marcos, TX. I am 24 years old, an aspiring software developer, and am interested in web design and video game developing.</p>
 								<p>A little about my personal life: I enjoy cooking and baking. I once helped prep and grill a variety of meats for about 50 people. I also enjoy working out, hiking, and running 5k's. I am a huge Dallas Cowboys fan and am convinced it is our year, every year. But above all, I am a family man and would do anything for my family.</p>
 							</article>
